--- a/package.json
+++ b/package.json
@@ -24,18 +24,17 @@
   "dependencies": {
     "optimist": "~0.6.0",
     "node-forge": "~0.1.5",
-    "hashd": "0.0.1",
+    "hashd": "~1.0.0",
     "hyperquest": "~0.1.7",
     "event-stream": "~3.0.16",
-    "cli-prompt": "~0.3.2",
-    "npm": "~1.3.6",
-    "pullover": "0.0.0",
     "deepcopy": "~0.3.1",
     "rimraf": "~2.2.2",
     "uniq": "0.0.2",
     "multilevel": "~5.3.2",
     "secure-peer": "~0.2.1",
     "prompter": "0.0.5",
-    "ip": "~0.1.0"
+    "ip": "~0.1.0",
+    "JSONStream": "~0.7.1",
+    "psexit": "~1.0.0"
   }
 }
