--- a/templates/cert.template
+++ b/templates/cert.template
@@ -1,6 +1,9 @@
 {
-  "address-at": prompt("Email Address"),
-  "real-name": prompt("Real Name"),
-  "servers-at": prompt("Server URLs", "async.ly"),
-  "public": prompt("Public Key Path", key || "./public.key")
+  "address-at": prompt("Email Address", address),
+  "real-name": prompt("Real Name", realname),
+  "servers-at": prompt("Server URLs", servers),
+  "public": prompt("Public Key Path", "default"),
+  "data": data,
+  "algorithm": algorithm
 }
+
