--- a/templates/data.template
+++ b/templates/data.template
@@ -1,7 +1,7 @@
 {
   "address-at": prompt("Email Address", address),
   "real-name": prompt("Real Name", realname),
-  "servers-at": prompt("Server URLs", servers),
+  "urls-at": prompt("Public Key URLs", servers),
   "public": prompt("Public Key Path", "default"),
   "data": data,
   "algorithm": algorithm
