--- a/package.json
+++ b/package.json
@@ -30,11 +30,9 @@
     "deepcopy": "~0.3.1",
     "rimraf": "~2.2.2",
     "uniq": "0.0.2",
-    "multilevel": "~5.3.2",
-    "secure-peer": "~0.2.1",
     "prompter": "0.0.5",
-    "ip": "~0.1.0",
     "JSONStream": "~0.7.1",
-    "psexit": "~1.0.0"
+    "psexit": "~1.0.0",
+    "pngify": "0.0.1"
   }
 }
