--- a/templates/config.template
+++ b/templates/config.template
@@ -1,7 +1,6 @@
 {
-  "address-at": prompt("Email Address"),
-  "real-name": prompt("Real Name"),
-  "urls-at": prompt("Public Key URLs"),
+  "addresses": prompt("Email Address"),
+  "name": prompt("Real Name"),
   "npm-repository": prompt("npm repository (optional)", "http://registry.npmjs.org/"),
   "public": prompt("Public Key Path", "Auto-Generate"),
   "private": prompt("Private Key Path", "Auto-Generate")
